--- a/.gitignore
+++ b/.gitignore
@@ -8,6 +8,8 @@ node_modules
 .env.local
 .env.*.local
 
+#git filter-branch --force --index-filter 'git rm --cached --ignore-unmatch  *soap*' --prune-empty --tag-name-filter cat -- --all
+
 # Log files
 npm-debug.log*
 yarn-debug.log*
