--- a/package.json
+++ b/package.json
@@ -14,8 +14,10 @@
     "bootstrap-vue": "^2.0.0-rc.13",
     "object-hash": "^1.3.1",
     "register-service-worker": "^1.5.2",
+    "videojs-brand": "0.0.4",
     "vue": "^2.6.7",
     "vue-izitoast": "^1.1.2",
+    "vue-router": "^3.0.2",
     "vue-video-player": "^5.0.2",
     "vuex": "^3.0.1"
   },
