--- a/package.json
+++ b/package.json
@@ -5,27 +5,35 @@
   "scripts": {
     "serve": "vue-cli-service serve",
     "build": "vue-cli-service build",
-    "lint": "vue-cli-service lint"
+    "lint": "vue-cli-service lint",
+    "//": "http//localhost:8000/dashboard",
+    "ui": "vue ui"
   },
   "dependencies": {
     "@babel/polyfill": "^7.2.5",
+    "acorn": "^6.1.1",
     "axios": "^0.18.0",
     "bootstrap": "^4.3.1",
     "bootstrap-vue": "^2.0.0-rc.13",
+    "jquery": "^3.3.1",
     "object-hash": "^1.3.1",
     "register-service-worker": "^1.5.2",
     "videojs-brand": "0.0.4",
-    "vue": "^2.6.7",
+    "vue": "^2.6.10",
+    "vue-click-outside": "^1.0.7",
+    "vue-hooks": "^0.3.2",
+    "vue-i18n": "^8.0.0",
     "vue-izitoast": "^1.1.2",
     "vue-router": "^3.0.2",
     "vue-video-player": "^5.0.2",
     "vuex": "^3.0.1"
   },
   "devDependencies": {
+    "@kazupon/vue-i18n-loader": "^0.3.0",
     "@vue/cli-plugin-babel": "^3.4.0",
     "@vue/cli-plugin-eslint": "^3.4.0",
     "@vue/cli-plugin-pwa": "^3.4.0",
-    "@vue/cli-service": "^3.4.0",
+    "@vue/cli-service": "^3.5.1",
     "@vue/eslint-config-prettier": "^4.0.1",
     "babel-eslint": "^10.0.1",
     "eslint": "^5.8.0",
@@ -33,6 +41,7 @@
     "fibers": "^3.1.1",
     "sass": "^1.16.0",
     "sass-loader": "^7.1.0",
-    "vue-template-compiler": "^2.5.21"
+    "vue-cli-plugin-i18n": "^0.5.2",
+    "vue-template-compiler": "^2.6.10"
   }
 }
