--- a/package.json
+++ b/package.json
@@ -15,9 +15,11 @@
     "axios": "^0.18.0",
     "bootstrap": "^4.3.1",
     "bootstrap-vue": "^2.0.0-rc.13",
+    "core-js": "3",
+    "corejs": "^1.0.0",
     "jquery": "^3.3.1",
     "object-hash": "^1.3.1",
-    "register-service-worker": "^1.5.2",
+    "register-service-worker": "^1.6.2",
     "videojs-brand": "0.0.4",
     "vue": "^2.6.10",
     "vue-click-outside": "^1.0.7",
@@ -25,6 +27,7 @@
     "vue-i18n": "^8.0.0",
     "vue-izitoast": "^1.1.2",
     "vue-router": "^3.0.2",
+    "vue-svg-loader": "^0.12.0",
     "vue-video-player": "^5.0.2",
     "vuex": "^3.0.1"
   },
@@ -32,7 +35,7 @@
     "@kazupon/vue-i18n-loader": "^0.3.0",
     "@vue/cli-plugin-babel": "^3.4.0",
     "@vue/cli-plugin-eslint": "^3.4.0",
-    "@vue/cli-plugin-pwa": "^3.4.0",
+    "@vue/cli-plugin-pwa": "^3.5.1",
     "@vue/cli-service": "^3.5.1",
     "@vue/eslint-config-prettier": "^4.0.1",
     "babel-eslint": "^10.0.1",
