--- a/package.json
+++ b/package.json
@@ -5,12 +5,18 @@
   "scripts": {
     "serve": "vue-cli-service serve",
     "build": "vue-cli-service build",
+    "buildmodern": "vue-cli-service build --modern",
     "lint": "vue-cli-service lint",
     "//": "http//localhost:8000/dashboard",
     "ui": "vue ui"
   },
   "dependencies": {
     "@babel/polyfill": "^7.2.5",
+    "@fortawesome/fontawesome-svg-core": "^1.2.17",
+    "@fortawesome/free-brands-svg-icons": "^5.8.1",
+    "@fortawesome/free-regular-svg-icons": "^5.8.1",
+    "@fortawesome/free-solid-svg-icons": "^5.8.1",
+    "@fortawesome/vue-fontawesome": "^0.1.6",
     "acorn": "^6.1.1",
     "axios": "^0.18.0",
     "bootstrap": "^4.3.1",
