--- a/package.json
+++ b/package.json
@@ -22,9 +22,8 @@
     "bootstrap": "^4.3.1",
     "bootstrap-vue": "^2.0.0-rc.13",
     "core-js": "3",
-    "corejs": "^1.0.0",
     "jquery": "^3.3.1",
-    "object-hash": "^1.3.1",
+    "object-hash": "0.2.5",
     "register-service-worker": "^1.6.2",
     "videojs-brand": "0.0.4",
     "vue": "^2.6.10",
