FIX: preparing to PRODUCTION

--- a/.env
+++ b/.env
@@ -1,2 +1,8 @@
 VUE_APP_I18N_LOCALE=en
 VUE_APP_I18N_FALLBACK_LOCALE=ru
+publicPath_TEST=./
+publicPath_PROD=/apcis-test/video-uploader/dist
+devServer_PROXY=http://localhost:3000/backend/index.php
+assetsDir=./
+outputDir=dist
+indexPath=index.html
