--- a/package.json
+++ b/package.json
@@ -6,6 +6,9 @@
     "serve": "vue-cli-service serve",
     "build": "vue-cli-service build",
     "buildmodern": "vue-cli-service build --modern",
+
+    "builddev": "vue-cli-service build --mode development",
+
     "lint": "vue-cli-service lint",
     "//": "http//localhost:8000/dashboard",
     "ui": "vue ui"
