--- a/.env
+++ b/.env
@@ -1,7 +1,8 @@
 VUE_APP_I18N_LOCALE=en
 VUE_APP_I18N_FALLBACK_LOCALE=ru
 publicPath_TEST=./
-publicPath_PROD=/apcis-test/video-uploader/dist
+#publicPath_PROD=/apcis-test/video-uploader/dist
+publicPath_PROD=././
 devServer_PROXY=http://localhost:3000/backend/index.php
 assetsDir=./
 outputDir=dist
