--- a/package.json
+++ b/package.json
@@ -11,45 +11,55 @@
     "ui": "vue ui"
   },
   "dependencies": {
-    "@babel/polyfill": "^7.2.5",
-    "@fortawesome/fontawesome-svg-core": "^1.2.17",
-    "@fortawesome/free-brands-svg-icons": "^5.8.1",
-    "@fortawesome/free-regular-svg-icons": "^5.8.1",
-    "@fortawesome/free-solid-svg-icons": "^5.8.1",
-    "@fortawesome/vue-fontawesome": "^0.1.6",
-    "acorn": "^6.1.1",
-    "axios": "^0.18.0",
-    "bootstrap": "^4.3.1",
-    "bootstrap-vue": "^2.0.0-rc.13",
-    "core-js": "3",
-    "jquery": "^3.3.1",
-    "object-hash": "0.2.5",
-    "register-service-worker": "^1.6.2",
-    "videojs-brand": "0.0.4",
     "vue": "^2.6.10",
+    "register-service-worker": "^1.6.2",
+    "vue-router": "^3.1.3",
+    "vuex": "^3.1.1",
+    "@babel/polyfill": "^7.6.0",
+    "@fortawesome/fontawesome-svg-core": "^1.2.25",
+    "@fortawesome/free-brands-svg-icons": "^5.11.2",
+    "@fortawesome/free-regular-svg-icons": "^5.11.2",
+    "@fortawesome/free-solid-svg-icons": "^5.11.2",
+    "@fortawesome/vue-fontawesome": "^0.1.7",
+    "acorn": "^7.1.0",
+    "axios": "^0.19.0",
+    "bootstrap": "^4.3.1",
+    "bootstrap-vue": "^2.0.2",
+    "core-js": "3",
+    "eslint-plugin-prettier": "^3.1.1",
+    "jquery": "^3.4.1",
+    "object-hash": "0.2.5",
+    "videojs-brand": "0.0.4",
     "vue-click-outside": "^1.0.7",
     "vue-hooks": "^0.3.2",
-    "vue-i18n": "^8.0.0",
-    "vue-izitoast": "^1.1.2",
-    "vue-router": "^3.0.2",
+    "vue-i18n": "^8.14.1",
+    "vue-izitoast": "^1.2.1",
     "vue-svg-loader": "^0.12.0",
-    "vue-video-player": "^5.0.2",
-    "vuex": "^3.0.1"
+    "vue-video-player": "^5.0.2"
   },
   "devDependencies": {
-    "@kazupon/vue-i18n-loader": "^0.3.0",
-    "@vue/cli-plugin-babel": "^3.4.0",
-    "@vue/cli-plugin-eslint": "^3.4.0",
-    "@vue/cli-plugin-pwa": "^3.5.1",
-    "@vue/cli-service": "^3.5.1",
-    "@vue/eslint-config-prettier": "^4.0.1",
+    "@kazupon/vue-i18n-loader": "^0.4.1",
+    "@vue/cli-plugin-babel": "^3.11.0",
+    "@vue/cli-plugin-eslint": "^3.11.0",
+    "@vue/cli-plugin-pwa": "^3.11.0",
+    "@vue/cli-service": "^3.11.0",
+    "@vue/eslint-config-prettier": "^5.0.0",
     "babel-eslint": "^10.0.1",
-    "eslint": "^5.8.0",
+    "eslint": "^5.16.0",
     "eslint-plugin-vue": "^5.0.0",
-    "fibers": "^3.1.1",
-    "sass": "^1.16.0",
+    "fibers": "^4.0.1",
+    "sass": "^1.18.0",
     "sass-loader": "^7.1.0",
-    "vue-cli-plugin-i18n": "^0.5.2",
+    "vue-cli-plugin-i18n": "^0.6.0",
     "vue-template-compiler": "^2.6.10"
-  }
+  },
+  "postcss": {
+    "plugins": {
+      "autoprefixer": {}
+    }
+  },
+  "browserslist": [
+    "> 1%",
+    "last 2 versions"
+  ]
 }
