--- a/package.json
+++ b/package.json
@@ -11,10 +11,6 @@
     "ui": "vue ui"
   },
   "dependencies": {
-    "vue": "^2.6.10",
-    "register-service-worker": "^1.6.2",
-    "vue-router": "^3.1.3",
-    "vuex": "^3.1.1",
     "@babel/polyfill": "^7.6.0",
     "@fortawesome/fontawesome-svg-core": "^1.2.25",
     "@fortawesome/free-brands-svg-icons": "^5.11.2",
@@ -29,13 +25,17 @@
     "eslint-plugin-prettier": "^3.1.1",
     "jquery": "^3.4.1",
     "object-hash": "0.2.5",
+    "register-service-worker": "^1.6.2",
     "videojs-brand": "0.0.4",
+    "vue": "^2.6.10",
     "vue-click-outside": "^1.0.7",
     "vue-hooks": "^0.3.2",
     "vue-i18n": "^8.14.1",
     "vue-izitoast": "^1.2.1",
+    "vue-router": "^3.1.3",
     "vue-svg-loader": "^0.12.0",
-    "vue-video-player": "^5.0.2"
+    "vue-video-player": "^5.0.2",
+    "vuex": "^3.1.1"
   },
   "devDependencies": {
     "@kazupon/vue-i18n-loader": "^0.4.1",
